--- a/quizz.html
+++ b/quizz.html
@@ -4,21 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="quizz.css">
 </head>
 <body>
     <div class="container">
-        <div id="question-container"></div>
-        <div id="question"></div>
-        <div id="answer-button">
+        <div id="question-container" class="hide">
+        <div id="question">
+        <div id="answer-button" class="btn-grid">
             <button class="btn">Option 1</button>
             <button class="btn">Option 2</button>
             <button class="btn">Option 3</button>
             <button class="btn">Option 4</button>
         </div>
     </div>
+    </div>
+   
     <div class="controls">
         <button id="start-btn" class="start-btn btn">Start</button>
-        <button id="next-btn" class="next-btn btn">Next</button>
-    </div>
+        <button id="next-btn" class="next-btn btn hide">Next</button>
+     </div>
 </body>
 </html>
