--- a/quizz.html
+++ b/quizz.html
@@ -11,7 +11,7 @@
         <div id="question-container" class="hide">
         <div id="question">
         <div id="answer-button" class="btn-grid">
-            <button class="btn">Option 1</button>
+            <button class="btn">Option </button>
             <button class="btn">Option 2</button>
             <button class="btn">Option 3</button>
             <button class="btn">Option 4</button>
